Fixed dark mode slider initial and moved color logging into Info

--- a/frontend/app_v2/src/css/modules/Console.css
+++ b/frontend/app_v2/src/css/modules/Console.css
@@ -25,7 +25,7 @@
 .entryText.Error {
     color: red;
 }
-.entryText.Init, .entryText.Color, .entryText.Warning {
+.entryText.Init, .entryText.Warning {
     color: rgb(223, 168, 67);
 }
 .entryText.Link, .entryText.Info{
